--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(imfDate2date)
 export(imfDate2freq)
 export(imfDate2month)
+export(imfDate2periodicity)
 export(imfDate2year)
 export(imfRefCtry)
 export(imfRefGroup)
 export(loadIFS2015)
+export(loadIFS2016)
 export(loadWEO2015oct)
 export(period2months)
 import(data.table)
