--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(imfDate2periodicity)
 export(imfDate2year)
 export(imfRefCtry)
 export(imfRefGroup)
+export(loadFSI2016)
 export(loadIFS2015)
 export(loadIFS2016)
 export(loadWEO2015oct)
